package edu.fiuba.algo3.modelo.tarot;

public interface ModificablePorTarot {
    void modificarse(int puntos, double multiplicador);
}
